[gd_scene load_steps=24 format=3 uid="uid://ckng63detpg81"]

[ext_resource type="Texture2D" uid="uid://dhv21cnwh8y4b" path="res://Resources/Character base.png" id="1_e7d54"]
[ext_resource type="Script" path="res://Entity/Player/Player.gd" id="1_gqhxu"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/States.gd" id="3_pqwyk"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/LockedState.gd" id="4_jim0x"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/IdleState.gd" id="5_ge4yc"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/RunState.gd" id="5_knb1c"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/JumpState.gd" id="6_kf4y8"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/JumpPeakState.gd" id="7_clwxn"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/FallState.gd" id="8_6y5yk"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/WallJumpState.gd" id="9_2sppr"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/WallGrabState.gd" id="11_2klq3"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/WallClimbState.gd" id="12_bexp8"]

[sub_resource type="Animation" id="Animation_5ksb1"]
resource_name = "Fall"
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [33]
}

[sub_resource type="Animation" id="Animation_vog66"]
resource_name = "Idle"
length = 0.7
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_3p2k2"]
resource_name = "Jump"
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [24, 25]
}

[sub_resource type="Animation" id="Animation_ypk8g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gffua"]
resource_name = "Run"
length = 0.8
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_hjl6o"]
resource_name = "WallJump"
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [48, 49, 50]
}

[sub_resource type="Animation" id="Animation_bptbt"]
resource_name = "WallKick"
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [56, 57, 58]
}

[sub_resource type="Animation" id="Animation_vowbq"]
resource_name = "WallGrab"
length = 0.9
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.45),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [64, 65]
}

[sub_resource type="Animation" id="Animation_0lcow"]
resource_name = "WallClimb"
length = 1.2
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7w2do"]
_data = {
"Fall": SubResource("Animation_5ksb1"),
"Idle": SubResource("Animation_vog66"),
"Jump": SubResource("Animation_3p2k2"),
"RESET": SubResource("Animation_ypk8g"),
"Run": SubResource("Animation_gffua"),
"WallClimb": SubResource("Animation_0lcow"),
"WallGrab": SubResource("Animation_vowbq"),
"WallJump": SubResource("Animation_hjl6o"),
"WallKick": SubResource("Animation_bptbt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7phbn"]
size = Vector2(8, 20)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_gqhxu")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_e7d54")
hframes = 8
vframes = 10

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7w2do")
}

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_7phbn")

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 4.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.05
drag_top_margin = 0.05
drag_right_margin = 0.05
drag_bottom_margin = 0.05

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_pqwyk")

[node name="Locked" type="Node" parent="StateMachine"]
script = ExtResource("4_jim0x")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_ge4yc")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("5_knb1c")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("6_kf4y8")

[node name="JumpPeak" type="Node" parent="StateMachine"]
script = ExtResource("7_clwxn")

[node name="WallJump" type="Node" parent="StateMachine"]
script = ExtResource("9_2sppr")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("8_6y5yk")

[node name="WallGrab" type="Node" parent="StateMachine"]
script = ExtResource("11_2klq3")

[node name="WallClimb" type="Node" parent="StateMachine"]
script = ExtResource("12_bexp8")

[node name="Timers" type="Node" parent="."]

[node name="CoyoteTime" type="Timer" parent="Timers"]

[node name="JumpBuffer" type="Timer" parent="Timers"]

[node name="Raycasts" type="Node2D" parent="."]

[node name="WallJump" type="Node2D" parent="Raycasts"]

[node name="BottomLeft" type="RayCast2D" parent="Raycasts/WallJump"]
position = Vector2(-3, 12)
target_position = Vector2(-4, 0)

[node name="BottomRight" type="RayCast2D" parent="Raycasts/WallJump"]
position = Vector2(3, 12)
target_position = Vector2(4, 0)
