[gd_scene load_steps=26 format=3 uid="uid://ckng63detpg81"]

[ext_resource type="Texture2D" uid="uid://dhv21cnwh8y4b" path="res://Resources/Character base.png" id="1_e7d54"]
[ext_resource type="Script" path="res://Entity/Player/Player.gd" id="1_gqhxu"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/States.gd" id="3_pqwyk"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/LockedState.gd" id="4_jim0x"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/IdleState.gd" id="5_qbr2a"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/RunState.gd" id="6_7tyg0"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/JumpState.gd" id="7_r1eat"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/JumpPeakState.gd" id="8_gsg8e"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/FallState.gd" id="9_atcla"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/WallJumpState.gd" id="10_6a8ok"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/WallSlideState.gd" id="11_jv0qb"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/WallGrabState.gd" id="12_f6i50"]
[ext_resource type="Script" path="res://Entity/Player/State Machine/WallClimbState.gd" id="13_as226"]

[sub_resource type="Animation" id="Animation_5ksb1"]
resource_name = "Fall"
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [32, 33]
}

[sub_resource type="Animation" id="Animation_vog66"]
resource_name = "Idle"
length = 0.7
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_3p2k2"]
resource_name = "Jump"
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [24, 25]
}

[sub_resource type="Animation" id="Animation_ypk8g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gffua"]
resource_name = "Run"
length = 0.8
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_61q0v"]
resource_name = "WallClimb"
length = 0.8
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.21, 0.4, 0.61),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75]
}

[sub_resource type="Animation" id="Animation_81n74"]
resource_name = "WallGrab"
length = 0.8
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.41),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [64, 65]
}

[sub_resource type="Animation" id="Animation_e3xc1"]
resource_name = "WallJump"
length = 0.6
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [56, 57, 58]
}

[sub_resource type="Animation" id="Animation_dfh83"]
resource_name = "WallKick"
length = 0.6
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [48, 49, 50]
}

[sub_resource type="Animation" id="Animation_vursr"]
resource_name = "WallSlide"
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [80]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7w2do"]
_data = {
"Fall": SubResource("Animation_5ksb1"),
"Idle": SubResource("Animation_vog66"),
"Jump": SubResource("Animation_3p2k2"),
"RESET": SubResource("Animation_ypk8g"),
"Run": SubResource("Animation_gffua"),
"WallClimb": SubResource("Animation_61q0v"),
"WallGrab": SubResource("Animation_81n74"),
"WallJump": SubResource("Animation_e3xc1"),
"WallKick": SubResource("Animation_dfh83"),
"WallSlide": SubResource("Animation_vursr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7phbn"]
size = Vector2(8, 20)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_gqhxu")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_e7d54")
hframes = 8
vframes = 11

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7w2do")
}

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_7phbn")

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 4.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.05
drag_top_margin = 0.05
drag_right_margin = 0.05
drag_bottom_margin = 0.05

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_pqwyk")

[node name="Locked" type="Node" parent="StateMachine"]
script = ExtResource("4_jim0x")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_qbr2a")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("6_7tyg0")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("7_r1eat")

[node name="JumpPeak" type="Node" parent="StateMachine"]
script = ExtResource("8_gsg8e")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("9_atcla")

[node name="WallJump" type="Node" parent="StateMachine"]
script = ExtResource("10_6a8ok")

[node name="WallSlide" type="Node" parent="StateMachine"]
script = ExtResource("11_jv0qb")

[node name="WallGrab" type="Node" parent="StateMachine"]
script = ExtResource("12_f6i50")

[node name="WallClimb" type="Node" parent="StateMachine"]
script = ExtResource("13_as226")

[node name="Timers" type="Node" parent="."]

[node name="CoyoteTime" type="Timer" parent="Timers"]

[node name="JumpBuffer" type="Timer" parent="Timers"]

[node name="Raycasts" type="Node2D" parent="."]

[node name="WallJump" type="Node2D" parent="Raycasts"]

[node name="WallKickLeft" type="RayCast2D" parent="Raycasts/WallJump"]
position = Vector2(-3.01, 12)
target_position = Vector2(-3, 0)

[node name="WallKickRight" type="RayCast2D" parent="Raycasts/WallJump"]
position = Vector2(3.01, 12)
target_position = Vector2(3, 0)

[node name="WallClimb" type="Node2D" parent="Raycasts"]

[node name="WallClimbTopLeft" type="RayCast2D" parent="Raycasts/WallClimb"]
position = Vector2(-3.01, -3)
target_position = Vector2(-3, 0)

[node name="WallClimbTopRight" type="RayCast2D" parent="Raycasts/WallClimb"]
position = Vector2(3.01, -3)
target_position = Vector2(3, 0)

[node name="WallClimbLimitTopLeft" type="RayCast2D" parent="Raycasts/WallClimb"]
position = Vector2(-3.01, -4)
target_position = Vector2(-3, 0)

[node name="WallClimbLimitTopRight" type="RayCast2D" parent="Raycasts/WallClimb"]
position = Vector2(3.01, -4)
target_position = Vector2(3, 0)

[node name="WallClimbLimitBottomLeft" type="RayCast2D" parent="Raycasts/WallClimb"]
position = Vector2(-3.01, 13)
target_position = Vector2(-3, 0)

[node name="WallClimbLimitBottomRight" type="RayCast2D" parent="Raycasts/WallClimb"]
position = Vector2(3.01, 13)
target_position = Vector2(3, 0)
